Refactor GitHub Actions workflow for Luogu signin

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,8 @@ name: 洛谷自动签到
 
 on:
   schedule:
-    # 每天 UTC+8 时间 00:01 运行 (UTC 16:01)
-    - cron: '1 16 * * *'
-  workflow_dispatch: # 允许手动触发
+    - cron: '1 16 * * *'  # 每天 UTC 16:01 (UTC+8 00:01)
+  workflow_dispatch:
 
 jobs:
   signin:
@@ -19,34 +18,11 @@ jobs:
       with:
         node-version: '18'
         
-    - name: 创建基础 package.json
+    - name: 创建必要目录
       run: |
-        if [ ! -f package.json ]; then
-          cat > package.json << EOF
-          {
-            "name": "luogu-auto-signin",
-            "version": "1.0.0",
-            "description": "洛谷自动签到 GitHub Actions 版本",
-            "main": "scripts/luogu-signin.js",
-            "scripts": {
-              "signin": "node scripts/luogu-signin.js"
-            },
-            "keywords": ["luogu", "signin", "github-actions"],
-            "author": "Auto Script",
-            "license": "MIT",
-            "engines": {
-              "node": ">=18.0.0"
-            }
-          }
-          EOF
-        fi
+        mkdir -p .data
+        mkdir -p scripts
         
-    - name: 生成 package-lock.json
-      run: npm install --package-lock-only
-      
-    - name: 创建数据目录
-      run: mkdir -p .data
-      
     - name: 执行洛谷签到
       env:
         LUOGU_COOKIE: ${{ secrets.LUOGU_COOKIE }}
